解决字符串排序问题，分数求和出现问题，完成面向对象编程类的基本学习

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -136,10 +136,14 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DS.cpp" />
     <ClCompile Include="Knowledge.cpp" />
+    <ClCompile Include="KnowledgeObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="TimeDown.hpp" />
+    <ClInclude Include="Timer.hpp" />
     <ClInclude Include="DS.h" />
     <ClInclude Include="Knowledge.h" />
+    <ClInclude Include="KnowledgeObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
