完成派生与继承的学习，解决分数求和代码问题，截止目前代码无bug，函数指针加&与不加&有问题

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -133,12 +133,14 @@
     <ClCompile Include="02sum.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="KnowledgeInherit.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DS.cpp" />
     <ClCompile Include="Knowledge.cpp" />
     <ClCompile Include="KnowledgeObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="KnowledgeInherit.h" />
     <ClInclude Include="TimeDown.hpp" />
     <ClInclude Include="Timer.hpp" />
     <ClInclude Include="DS.h" />
