学习多态（上），类中函数的临时对象返回有问题。

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -134,6 +134,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="KnowledgeInherit.cpp" />
+    <ClCompile Include="KnowledgePolymorphism.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DS.cpp" />
     <ClCompile Include="Knowledge.cpp" />
@@ -141,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="KnowledgeInherit.h" />
+    <ClInclude Include="KnowledgePolymorphism.h" />
     <ClInclude Include="TimeDown.hpp" />
     <ClInclude Include="Timer.hpp" />
     <ClInclude Include="DS.h" />
