文件操作学习（上），同类静态对象仍有问题

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -135,6 +135,7 @@
     </ClCompile>
     <ClCompile Include="KnowledgeInherit.cpp" />
     <ClCompile Include="KnowledgePolymorphism.cpp" />
+    <ClCompile Include="KnowledgeStandardIO.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DS.cpp" />
     <ClCompile Include="Knowledge.cpp" />
@@ -143,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="KnowledgeInherit.h" />
     <ClInclude Include="KnowledgePolymorphism.h" />
+    <ClInclude Include="KnowledgeStandardIO.h" />
     <ClInclude Include="TimeDown.hpp" />
     <ClInclude Include="Timer.hpp" />
     <ClInclude Include="DS.h" />
