--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="KnowledgeStandardIO.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="text.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DS.h">
@@ -66,6 +69,9 @@
       <Filter>源文件</Filter>
     </ClInclude>
     <ClInclude Include="KnowledgeStandardIO.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="text.h">
       <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
