一轮学习完成

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="KnowledgeInherit.cpp" />
     <ClCompile Include="KnowledgePolymorphism.cpp" />
     <ClCompile Include="KnowledgeStandardIO.cpp" />
+    <ClCompile Include="KnowledgeTemplate.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="DS.cpp" />
     <ClCompile Include="Knowledge.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="KnowledgeInherit.h" />
     <ClInclude Include="KnowledgePolymorphism.h" />
     <ClInclude Include="KnowledgeStandardIO.h" />
+    <ClInclude Include="KnowledgeTemplate.h" />
     <ClInclude Include="text.h" />
     <ClInclude Include="TimeDown.hpp" />
     <ClInclude Include="Timer.hpp" />
